Style fixes : - Titles of links on homepage took too much place, setting a new padding-right - Carousel text was too high

--- a/resources/static/css/index.styl
+++ b/resources/static/css/index.styl
@@ -182,7 +182,7 @@ img.center
   list-style-type: unset !important
 
 .links-embed-title
-  padding-right: 20px
+  padding-right: 25px
 
 .icon-chip
   line-height: inherit
@@ -195,3 +195,6 @@ img.center
 
 .nav-wrapper.semitransparent
   overflow: hidden
+
+.carousel-bop-homepage-title
+  margin-top: 64px;
